# gnostr-grep

./: .gitignore  Cargo.toml  GNUmakefile  README.md  cargo.mk  docker.mk
.github/workflows/: cargo-build.yml
.gnostr/: RELAYS.md  gnostr.relays
src/: lib.rs  main.rs
